2week/vpc-sg-ec2/sg.tf
resource "aws_security_group" "sg" {
  vpc_id      = aws_vpc.main.id
  name        = "somaz-sg"
  description = "Somaz SG"
}

resource "aws_security_group_rule" "sg_inbound" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.sg.id
}

resource "aws_security_group_rule" "sg_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.sg.id
}
